# LiveBudsCli

./: .gitignore  Cargo.toml  README.md  config.example.toml
.github/workflows/: rust.yml
scripts/: i3status-rust.sh  polybar.sh  waybar.sh
src/: cli.rs  daemon_utils.rs  main.rs  model.rs
src/cmd/: config_set.rs  connection.rs  info.rs  mod.rs  set_value.rs  socket_client.rs  utils.rs  value.rs
src/daemon/: bluetooth.rs  bud_connection.rs  buds_config.rs  buds_info.rs  client_handler.rs  connection_handler.rs  mod.rs  unix_request_handler.rs  unix_socket.rs  utils.rs
src/daemon/bluetooth/: bean_connection.rs  bt_buds_listener.rs  bt_connection_listener.rs  mod.rs  rfcomm_connector.rs
src/daemon/bluetooth/bean_connection/: ambient_mode.rs  anc.rs  extended_status_update.rs  get_all_data.rs  listener.rs  mod.rs  sink.rs  status_update.rs  touchpad.rs  utils.rs
src/daemon/unix_socket/: bluetooth_commands.rs  config.rs  connection_handler.rs  mod.rs  req_executor.rs  set_value.rs  socket.rs
