[package]
name = "earbuds"
version = "0.1.9"
authors = ["jojii <jojii@gmx.net>"]
edition = "2018"
description = "Control your galaxy buds live via cli"
repository = "https://github.com/JojiiOfficial/LiveBudsCli"
license = "GPL-3.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
galaxy_buds_rs = { git = "https://github.com/JojiiOfficial/GalaxyBuds-rs" }
#galaxy_buds_rs = "0.2.10"
#galaxy_buds_rs = { path = "../GalaxyBuds-rs" }
clap = { version = "4.5", features = ["std", "cargo"] }
clap_complete = "4.5"
async-std = { version = "1.12.0", features = ["attributes"] }
bluetooth-serial-port-async = "0.6.3"
blurz = "0.4.0"
ofiles = "0.2.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
notify-rust = "4.11.0"
toml = "0.8.14"
mpris = "2.0.1"
#clap_generate = "3.0.3"
nix = {version = "0.29.0", features = ["signal"]}
rust-pulsectl-fork = { version = "0.2.12", optional = true }
human-panic = "2.0.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"

[features]
default = ["pulse-sink"]
pulse-sink = ["rust-pulsectl-fork"]
